--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -47,9 +47,14 @@
       font-size: 1.75rem;
       font-weight: 400;
       cursor: pointer;
+      transition: color 300ms ease;
 
       &:focus {
         cursor: text;
+      }
+
+      &-loading {
+        color: var(--color-primary-dark);
       }
     }
   }
