--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -44,10 +44,14 @@
       background-color: var(--color-primary-dark);
       color: var(--color-font-accent-alt);
       font-family: var(--font-monospace);
-      font-size: 1.75rem;
       font-weight: 400;
       cursor: pointer;
       transition: color 250ms ease;
+      font-size: 1.25rem;
+
+      @media (--medium) {
+        font-size: 1.75rem;
+      }
 
       &:focus {
         cursor: text;
