--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -27,10 +27,10 @@
     max-width: 31.25rem; /* 500/16 */
     margin: 0;
     padding: 0.5rem 0.75rem;
-    background-color: var(--color-secondary);
+    background-color: var(--color-primary-dark);
     border: 0;
     border-radius: 2px;
-    color: var(--color-font-dark);
+    color: var(--color-font-primary);
     font-family: var(--font-sans);
     font-size: 1rem;
 
@@ -41,7 +41,6 @@
 
   & &__input {
     &--display {
-      background-color: var(--color-primary-dark);
       color: var(--color-font-accent-alt);
       font-family: var(--font-monospace);
       font-weight: 400;
